Add ucanbc files for webpage

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The odin project assignment</title>
-    <link rel="stylesheet" href="style.css"
+    <title>UC Badminton Club</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./images/favicon.png" type="image/png ">
 </head>
 <body>
     <div class="header">
-        <img class="logo" src="https://www.theodinproject.com/assets/icons/odin-icon-b5b31c073f7417a257003166c98cc23743654715305910c068b93a3bf4d3065d.svg">
+        <img class="logo" src="./images/header-logo-ucanbc.jpg">
+        <div class="logo-title"> UCanBC </div>
         <div class="header-links">
-            <a href="#"> link one </a>
-            <a href="#"> link two </a>
-            <a href="#"> link three </a>
+            <a href="https://www.facebook.com/UCanBC/"><img class="logo-link" src="./images/fb-icon.svg"> </a>
+            <a href="https://www.instagram.com/ucanbc/"><img class="logo-link" src="./images/ig-icon.svg"></a>
+            <a href="https://ucsa.org.nz/clubs/browse/"> Other clubs </a>
         </div>
     </div>
 
@@ -21,48 +23,68 @@
         <div class="hero-header">
             <div class="hero-content">
                 <div class="text-container">
-                    <h1 style="font-size: 48px; font-weight: extra-bold; margin: 0; "> This website is awesome! </h1>
-                    <p style="margin:0px;"> This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast </p>
-                    <button type="button" class="hero-button"> <a href="#">Sign up</a> </button>
+                    <h1 style="font-size: 48px; font-weight: extra-bold; margin: 0; "> Hello! </h1>
+                    <p style="margin:0px; font-size: 20px;"> We are UCanBC (University of Canterbury Badminton Club) a social club
+                         welcoming all keen players. Most of us are University students but anybody is welcome to join!  </p>
+                    <button class="button hero-button"> <a href=#session_info> Click to go to session info </a> </button>
                 </div>
-                <div class="hero-image">
+                <!-- <div class="hero-image">
                     <img class="hero-img-class" src="./images/kristina-delp-mIle950upog-unsplash (1).jpg">
-                </div> 
+                </div>  -->
             </div>
         </div> 
 
         <div class="picture-info">
-            <div class="picture-title"> Some random information </div>
+            <div class="picture-title"> Our Committee </div>
             <div class="image-container">
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> This is some subtext under an illustration or image</div>
+                    <div class="text"> Social media This is some subtext under an illustration or image</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> This is some subtext under an illustration or image</div>
+                    <div class="text"> Treasurer This is some subtext under an illustration or image</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> This is some subtext under an illustration or image</div>
+                    <div class="text"> General Executive This is some subtext under an illustration or image</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> This is some subtext under an illustration or image</div>
+                    <div class="text"> General Executive This is some subtext under an illustration or image</div>
+                </div>
+                <div class=display-info> 
+                    <div>
+                        <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                    </div>
+                    <div class="text"> SecretaryThis is some subtext under an illustration or image</div>
+                </div>
+                <div class=display-info> 
+                    <div>
+                        <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                    </div>
+                    <div class="text"> Vice President This is some subtext under an illustration or image</div>
+                </div>
+                <div class=display-info> 
+                    <div>
+                        <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                    </div>
+                    <div class="text"> President This is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div> 
 
         <div class="filler-section"> 
             <div class="filler-container">
+                <a id="session_info">session info</a>
                 <div class="filler-quote"> This is an aspiring quote, or a testimonial from a customer.
                     Maybe it's just filling up space, or maybe people will actually read it. 
                     Who knows? All I know is that it looks nice
@@ -77,7 +99,7 @@
                     <div style="font-weight: bolder;"> Call to action! it's time! </div>
                     <div> Sign up for our product! click the button </div>
                 </div>
-                <button type="button" class="action-button"> <a href="#">Sign up</a></button>
+                <button class="button action-button"> <a href="#"><span> Sign up</span></a></button>
             </div>
         </div>
     </div>
