--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         <div class="filler-section"> 
             <div class="filler-container">
                 <a id="session_info">session info</a>
-                <div class="filler-quote"> This is an aspiring quote, or a testimonial from a customer.
-                    Maybe it's just filling up space, or maybe people will actually read it. 
-                    Who knows? All I know is that it looks nice
+                <div class="filler-quote"> This is some filler text, This is some filler text
+                    This is some filler textThis is some filler textThis is some filler textThis is some filler text
+                    This is some filler texThis is some filler text
                 </div>
-                <div class="author">-Thor, God of Thunder</div>
+                <div class="author">-session info</div>
             </div>
         </div> 
 
         <div class="action-section">
             <div class="action-content">
                 <div class="action-text">
-                    <div style="font-weight: bolder;"> Call to action! it's time! </div>
-                    <div> Sign up for our product! click the button </div>
+                    <div style="font-weight: bolder;"> heading, sign up </div>
+                    <div> click here for queries.... </div>
                 </div>
                 <button class="button action-button"> <a href="#"><span> Sign up</span></a></button>
             </div>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="footer">
-        <div class="footer-text"> Copyright <span>&#169;</span> The Odin project</div>
+        <div class="footer-text"> Copyright <span>&#169;</span> UC badminton </div>
     </div>
 </body>
 </html>
