--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8GDCNWDVKC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -10,6 +10,7 @@
 
       gtag('config', 'G-8GDCNWDVKC');
     </script>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,12 +20,15 @@
 </head>
 <body>
     <div class="header">
-        <img class="logo" src="./images/header-logo-ucanbc.jpg">
-        <div class="logo-title"> UCanBC </div>
+        <div class="header-title">
+            <img class="logo" src="./images/header-logo-ucanbc.jpg">
+            <div class="logo-title"> UCanBC </div>
+        </div>
+        
         <div class="header-links">
             <a href="https://www.facebook.com/UCanBC/"><img class="logo-link" src="./images/fb-icon.svg"> </a>
             <a href="https://www.instagram.com/ucanbc/"><img class="logo-link" src="./images/ig-icon.svg"></a>
-            <a href="https://ucsa.org.nz/clubs/browse/"> Other clubs </a>
+            <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other clubs </a>
         </div>
     </div>
 
@@ -32,10 +36,13 @@
         <div class="hero-header">
             <div class="hero-content">
                 <div class="text-container">
-                    <h1 style="font-size: 48px; font-weight: extra-bold; margin: 0; "> Hello! </h1>
-                    <p style="margin:0px; font-size: 20px;"> We are UCanBC (University of Canterbury Badminton Club) a social club
-                         welcoming all keen players. Most of us are University students but anybody is welcome to join!  </p>
-                    <button class="button hero-button"> <a href=#session_info> Click to go to session info </a> </button>
+                    <h1 class="text-item" style="font-size: 3em; font-weight:bolder; margin: 10px 0 10px;"> Hello! </h1>
+                    <p class="text-item" style="font-size: 2em; margin: 0px; margin-bottom: 5px;"> We are the University of
+                         Canterbury Badminton Club (UcanBC)</p>
+                         <p>
+                            a social club welcoming all players. Most of us are University students however anyone is welcome to join!
+                         </p>
+                    <button class="button hero-button"> <a href=#session-info> <span>Click to go to session info </span></a> </button>
                 </div>
                 <!-- <div class="hero-image">
                     <img class="hero-img-class" src="./images/kristina-delp-mIle950upog-unsplash (1).jpg">
@@ -93,28 +100,28 @@
 
         <div class="filler-section"> 
             <div class="filler-container">
-                <a id="session_info">session info</a>
-                <div class="filler-quote"> This is some filler text, This is some filler text
-                    This is some filler textThis is some filler textThis is some filler textThis is some filler text
-                    This is some filler texThis is some filler text
+                <a id="session-info">session info</a>
+                <div class="filler-quote"> 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac vehicula velit, at tempus felis.
+                     Quisque sagittis elementum sapien et tempus. Nulla orci mi, facilisis vitae vestibulum commodo,
+                      congue quis diam. Curabitur lectus dolor, elementum in lorem vel, auctor scelerisque augue.
+                       Suspendisse egestas ullamcorper libero, vitae ultrices lorem
                 </div>
-                <div class="author">-session info</div>
             </div>
         </div> 
 
         <div class="action-section">
             <div class="action-content">
                 <div class="action-text">
-                    <div style="font-weight: bolder;"> heading, sign up </div>
-                    <div> click here for queries.... </div>
+                    Got a special query?
                 </div>
-                <button class="button action-button"> <a href="#"><span> Sign up</span></a></button>
+                <button class="button hero-button action-button"> <a href="#"><span> Email us </span></a></button>
             </div>
         </div>
     </div>
 
     <div class="footer">
-        <div class="footer-text"> Copyright <span>&#169;</span> UC badminton </div>
+        <div class="footer-text"> Copyright <span>&#169;</span> The Odin project</div>
     </div>
 </body>
 </html>
