add faq.html and light styles

--- a/index.html
+++ b/index.html
@@ -63,43 +63,43 @@
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> Social media This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>Social media</mark> This is some subtext under an illustration or image</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> Treasurer This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>Treasurer</mark> This is some subtext under an illustration or image</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> General Executive This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>General Executive</mark> This is some subtext under an illustration or image</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> General Executive This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>General Executive</mark> This is some subtext under an illustration or image</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> SecretaryThis is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>Secretary</mark> This is some subtext under an illustration or image</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> Vice President This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>Vice President</mark> This is some subtext under an illustration or image</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
                     </div>
-                    <div class="text"> President This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>President</mark> This is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div> 
@@ -127,6 +127,10 @@
                 </div>
             </div>
         </div> 
+        
+        <div class="footer">
+            <div class="footer-text"> Copyright <span>&#169;</span> The Odin project</div>
+        </div>
         <!-- <div class="action-section">
             <div class="action-content">
                 <div class="action-text">
@@ -137,9 +141,7 @@
         </div> -->
     </div>
 
-    <div class="footer">
-        <div class="footer-text"> Copyright <span>&#169;</span> The Odin project</div>
-    </div>
+    
 
 </body>
 </html>
