add info to site to be informative (faq and info sections) + minor padding

--- a/faq.html
+++ b/faq.html
@@ -21,27 +21,38 @@
 <body>
     <div class="header">
         <div class="header-title">
-            <img class="logo" src="./images/header-logo-ucanbc.jpg">
+            <!-- <img class="logo" src="./images/header-logo-ucanbc.jpg"> -->
             <div class="logo-title"> <a href="index.html"> UCanBC </a></div>
             <div class="other-page-header">frequently asked questions</div>
         </div>
         
         <div class="header-links">
-            <a href="https://www.facebook.com/UCanBC/"><img class="logo-link" src="./images/fb-icon.svg"> </a>
-            <a href="https://www.instagram.com/ucanbc/"><img class="logo-link" src="./images/ig-icon.svg"></a>
-            <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other clubs </a>
+            <a class="logo-link" href="https://www.facebook.com/UCanBC/"><img title="facebook link icon" alt="facebook link icon" src="./images/iconmonstr-facebook-1-64.png"> </a>
+            <a class="logo-link" href="https://www.instagram.com/ucanbc/"><img title="instagram link icon" alt="instagram link icon" src="./images/iconmonstr-instagram-11-64.png"></a>
+            <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
             <a class="text-link" href="faq.html"> FAQ! </a>
         </div>
     </div>
  
-    <div class="hero-header" style="min-height: 1000px;">
+    <div class="faq-container hero-header">
         <div class="faq-content">
             <h1 class="text-item" style="font-size: 3em; font-weight:bolder; margin: 10px 0 10px;"> FAQ! </h1>
-            <p class="text-item" style="font-size: 2em; margin: 0px; margin-bottom: 5px;"> We are workign on our most asked questions...</p>
                     <p>
-                    a social club welcoming all players. Most of us are University students however anyone is welcome to join!
+                        <h5 class="question">What equipment do I need to bring?</h5>
+                            You can simply bring yourself and preferably some indoor court shoes, we have racquets and shuttles provided.
+                        <h5 class="question"> Where is the Gymnasium?</h5>
+                            We are located at the University of Canterbury Recreation centre close to campus
+                        <h5 class="question">How does the membership discount card work? </h5>
+                            Simply present your Membership discount card to any of our amazing sponsors and they will apply the discount for you!
+                        <h5 class="question">Do I need to be a member to play? </h5>
+                            No, non-members can play too. It will be good to come earlier to guarantee a spot!
+                        <h5 class="question">How can I register? </h5>
+                            You can register using this form here or contact us directly if you are having troubles
+                        <h5 class="question">How does it work there? </h5>
+                            We have 4 courts and allocate players to each court and play for 12 minutes before we make the next game. Usually, you play one game and then rest one game.
+
                     </p>
-            <button class="button hero-button"> <a href="index.html"> <span>back to home!</span></a> </button>
+            <button class="button hero-button"> <a href="index.html"> back to home! </a> </button>
         </div>
     </div> 
 
