--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <body>
     <div class="header">
         <div class="header-title">
-            <img class="header-logo" alt="UcanBC logo" src="./images/header-logo-ucanbc.jpg">
+            <img class="header-logo" title="UcanBC logo" alt="UcanBC logo" src="./images/header-logo-ucanbc.jpg">
             <div class="logo-title"> <a class="title-text" href="index.html"> UCanBC </a></div>
         </div>
         
         <div class="header-links">
-            <a class="logo-link" href="https://www.facebook.com/UCanBC/"><img alt="facebook link icon" src="./images/iconmonstr-facebook-1-64.png"> </a>
-            <a class="logo-link" href="https://www.instagram.com/ucanbc/"><img alt="instagram link icon" src="./images/iconmonstr-instagram-11-64.png"></a>
+            <a class="logo-link" href="https://www.facebook.com/UCanBC/"><img title="facebook link icon" alt="facebook link icon" src="./images/iconmonstr-facebook-1-64.png"> </a>
+            <a class="logo-link" href="https://www.instagram.com/ucanbc/"><img title="instagram link icon" alt="instagram link icon" src="./images/iconmonstr-instagram-11-64.png"></a>
             <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
             <a class="text-link" href="faq.html"> FAQ! </a>
         </div>
@@ -63,45 +63,45 @@
             <div class="image-container">
                 <div class=display-info> 
                     <div>
-                        <img class="box-img" alt="committee portrait 1" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                        <img class="box-img" title="comittee portrait" alt="committee portrait 1" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Social media</mark> This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>Social media</mark> R This is some subtext</div>
                 </div>
                 <div class=display-info> 
                     <div>
-                        <img class="box-img" alt="committee portrait 2" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                        <img class="box-img" title="comittee portrait" alt="committee portrait 2" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Treasurer</mark> This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>Treasurer</mark> J This is some subtext</div>
                 </div>
                 <div class=display-info> 
                     <div>
-                        <img class="box-img" alt="committee portrait 3" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                        <img class="box-img" title="comittee portrait" alt="committee portrait 3" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>General Executive</mark> This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>General Executive</mark> B This is some subtext</div>
                 </div>
                 <div class=display-info> 
                     <div>
-                        <img class="box-img" alt="committee portrait 4" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                        <img class="box-img" title="comittee portrait" alt="committee portrait 4" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>General Executive</mark> This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>General Executive</mark> D This is some subtext</div>
                 </div>
                 <div class=display-info> 
                     <div>
-                        <img class="box-img" alt="committee portrait 5"src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                        <img class="box-img" title="comittee portrait" alt="committee portrait 5"src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Secretary</mark> This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>Secretary</mark> J This is some subtext</div>
                 </div>
                 <div class=display-info> 
                     <div>
-                        <img class="box-img" alt="committee portrait 6" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                        <img class="box-img" title="comittee portrait" alt="committee portrait 6" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Vice President</mark> This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>President</mark> A This is some subtext</div>
                 </div>
                 <div class=display-info> 
                     <div>
-                        <img class="box-img" alt="committee portrait 7" src="./images/ivan-bandura-EWVXMoIWlpA-unsplash.jpg">
+                        <img class="box-img" title="comittee portrait" alt="committee portrait 7" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>President</mark> This is some subtext under an illustration or image</div>
+                    <div class="text"> <mark>Vice President</mark> L This is some subtext</div>
                 </div>
             </div>
         </div> 
@@ -110,10 +110,8 @@
             <div class="filler-container">
                 <h3><a id="session-info">session info</a> </h3>
                 <div class="text-section"> 
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac vehicula velit, at tempus felis.
-                     Quisque sagittis elementum sapien et tempus. Nulla orci mi, facilisis vitae vestibulum commodo,
-                      congue quis diam. Curabitur lectus dolor, elementum in lorem vel, auctor scelerisque augue.
-                       Suspendisse egestas ullamcorper libero, vitae ultrices lorem
+                    Under construction.... We run on Friday (5:45pm - 8:45pm) and Saturdays (1:00pm - 3:00pm)
+
                 </div>
             </div>
         </div> 
@@ -122,10 +120,9 @@
             <div class="filler-container">
                 <h3> <a id="membership-info">membership info</a> </h3>
                 <div class="text-section"> 
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac vehicula velit, at tempus felis.
-                     Quisque sagittis elementum sapien et tempus. Nulla orci mi, facilisis vitae vestibulum commodo,
-                      congue quis diam. Curabitur lectus dolor, elementum in lorem vel, auctor scelerisque augue.
-                       Suspendisse egestas ullamcorper libero, vitae ultrices lorem
+                    Under construction.... Friday: Non-member price - $10 || Saturday: Non-member price: $7 
+                    Friday full membership - 120$ (One semester) || Concession card - $55 (6 sessions)
+                    Saturday full membership - $84 (One semester) || Concession card - $40$ (6 sessions)
                 </div>
             </div>
         </div> 
