fix faq sizing on screens and add faq button in place of unfinsihed dropdown

--- a/faq.html
+++ b/faq.html
@@ -52,7 +52,7 @@
                             We have 4 courts and allocate players to each court and play for 12 minutes before we make the next game. Usually, you play one game and then rest one game.
 
                     </p>
-            <button class="button hero-button"> <a href="index.html"> back to home! </a> </button>
+            <button class="to-home-button hero-button"> <a href="index.html"> back to home! </a> </button>
         </div>
     </div> 
 
