--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <div class="button-container">
                         <button class="hero-button"> <a href=#session-info> <span class="button-span">session info </span></a> </button>
                         <button class="hero-button"> <a href=#membership-info> <span class="button-span">membership info </span></a> </button>
+                        <button class="hero-button faq-button"> <a href="faq.html" <span class="button-span">FAQ </span></a> </button>
                     </div>
                     
                 </div>
@@ -130,14 +131,6 @@
         <div class="footer">
             <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club.The Odin project</div>
         </div>
-        <!-- <div class="action-section">
-            <div class="action-content">
-                <div class="action-text">
-                    Got a special query?
-                </div>
-                <button class="button hero-button action-button"> <a href="#"><span> Email us </span></a></button>
-            </div>
-        </div> -->
     </div>
 
     
