added membership infographics + tweak padding to fit small screens

--- a/faq.html
+++ b/faq.html
@@ -61,10 +61,11 @@
                     <a id="side-logo" href="https://www.instagram.com/ucanbc/"><img title="side-instagram" alt="instagram link icon" src="./images/iconmonstr-instagram-11-64.png"></a>
                 </div>
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="#">Media</a>
-                <a href="#">Sign up</a>
-                <a  href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
-                <a  href="faq.html"> FAQ! </a>
+                <a href="index.html"> Home </a>
+                <a href="#">Media (coming!)</a>
+                <a href="#">Sign up (coming!)</a>
+                <a href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
+                <a href="faq.html"> FAQ! </a>
             </div>
 
             <span hidden id="navBar" class="navOpen" onclick="openNav()" style="cursor: pointer;"> &#9776; </span>
@@ -78,9 +79,9 @@
         </div>
     </div>
  
-    <div class="faq-container hero-header">
+    <div class="faq-container">
         <div class="faq-content">
-            <h1 class="text-item" style="font-size: 3em; font-weight:bolder; margin: 10px 0 10px;"> FAQ! </h1>
+            <h1 class="faq-title" style="color:white;"> FAQ! </h1>
                     <p>
                         <h5 class="question">What equipment do I need to bring?</h5>
                             You can simply bring yourself and preferably some indoor court shoes, we have racquets and shuttles provided.
@@ -101,7 +102,7 @@
     </div> 
 
     <div class="footer">
-        <div> For further enquiries...contact us at @ucbclub@gmail.com</div>
+        <div> contact us at @ucbclub@gmail.com</div>
         <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club.The Odin project</div>
     </div>
    
