--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 //alert("on mobile device");
                 navBar.removeAttribute("hidden");
             } else {
-                navBar.setAttribute("hidden");
+                navBar.setAttribute("display", "hidden");
                 //alert("on non-mobile device");
             }
             // let bar = 'test-test';
@@ -85,8 +85,8 @@
             
             <div class="hero-content">
                 <div class="text-container">
-                    <h1 class="text-item" style="font-size: 3em; font-weight:bolder; margin: 10px 0 10px;"> Hello! </h1>
-                    <p class="text-item" style="font-size: 1.5em; margin: 0px; margin-bottom: 5px; opacity: 1;"> 
+                    <h1 style="font-size: 3em; font-weight:bolder; margin: 10px 0 10px;"> Hello! </h1>
+                    <p  style="font-size: 1.5em; margin: 0px; margin-bottom: 5px; opacity: 1;"> 
                         We are the <span>U</span>niversity of <span>Can</span>terbury <span>B</span>adminton <span>C</span>lub
                     </p>
                          <p style="font-size:1.5em;">
@@ -106,7 +106,7 @@
         </div> 
 
         <div class="picture-info">
-            <div class="picture-title"> Our Committee </div>
+            <div> <a class="picture-title" id="committee-info">Our Committee </a></div>
             <div class="image-container">
                 <div class=display-info> 
                     <div>
@@ -155,22 +155,15 @@
 
         <div class="filler-section"> 
             <div class="filler-container">
-                <h3><a id="session-info">session info</a> </h3>
-                <div class="text-section"> 
-                    Under construction.... We run on Friday (5:45pm - 8:45pm) and Saturdays (1:00pm - 3:00pm)
-
-                </div>
+                <h3><a id="session-info" style="font-size: 2rem" >Session Info</a> </h3>
+                <img class="sessiongraphic" src="images/UCANBC_PRICE_SESSION.png">
             </div>
         </div> 
 
         <div class="filler-section" style="background-color: #F9FaF8"> 
             <div class="filler-container">
-                <h3> <a id="membership-info">membership info</a> </h3>
-                <div class="text-section"> 
-                    Under construction.... Friday: Non-member price - $10 || Saturday: Non-member price: $7 
-                    Friday full membership - 120$ (One semester) || Concession card - $55 (6 sessions)
-                    Saturday full membership - $84 (One semester) || Concession card - $40$ (6 sessions)
-                </div>
+                <h3> <a id="membership-info" style="font-size: 2rem">Membership Info</a> </h3>
+                <img class="sessiongraphic" src="images/UCANBC_MEMBERSHIP.png">
             </div>
         </div> 
         
