--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
     <link rel="icon" href="./images/favicon.png" type="image/png ">
 </head>
-<body onload="checkNav()">
+<body>
+     <!-- onload="checkNav()"> -->
     <script>
         function checkNav() {
             let w = window.innerWidth;
@@ -61,15 +62,15 @@
                 </div>
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="index.html"> Home </a>
-                <a href="#">Media (in progress)</a>
-                <a href="#">Sign up (in progress)</a>
+                <a href="./media.html">Media </a>
+                <a href="./sign-up.html">Sign up </a>
                 <a  href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
                 <a  href="faq.html"> FAQ! </a>
                 <div>contact us at @ucbclub@gmail.com</div>
             </div>
               
             <!-- Use any element to open the sidenav -->
-            <span hidden id="navBar" class="navOpen" onclick="openNav()" style="cursor: pointer;"> &#9776; </span>
+            <span id="navBar" class="navOpen" onclick="openNav()" style="cursor: pointer;"> &#9776; </span>
         </div>
         
         <div class="header-links">
