clean navbar/footer styling

--- a/committee.html
+++ b/committee.html
@@ -63,8 +63,8 @@
                 <a href="./committee.html"> Our Committee! </a>
                 <a href="./media.html">Media </a>
                 <a href="./sign-up.html">Sign up </a>
-                <a  href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
-                <a  href="faq.html"> FAQ! </a>
+                <a href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
+                <a href="faq.html"> FAQ! </a>
                 <div>contact us at @ucbclub@gmail.com</div>
             </div>
               
@@ -83,27 +83,53 @@
         </div>
     </div>
  
-    <div class="faq-container">
-        <div class="faq-content">
-            <h1 class="faq-title" style="color:white;"> FAQ! </h1>
-                    <p>
-                        <h5 class="question">What equipment do I need to bring?</h5>
-                            You can simply bring yourself and preferably some indoor court shoes, we have racquets and shuttles provided.
-                        <h5 class="question"> Where is the Gymnasium?</h5>
-                            We are located at the University of Canterbury Recreation centre close to campus
-                        <h5 class="question">How does the membership discount card work? </h5>
-                            Simply present your Membership discount card to any of our amazing sponsors and they will apply the discount for you!
-                        <h5 class="question">Do I need to be a member to play? </h5>
-                            No, non-members can play too. It will be good to come earlier to guarantee a spot!
-                        <h5 class="question">How can I register? </h5>
-                            You can register using this form here or contact us directly if you are having troubles
-                        <h5 class="question">How does it work there? </h5>
-                            We have 4 courts and allocate players to each court and play for 12 minutes before we make the next game. Usually, you play one game and then rest one game.
-
-                    </p>
-            <button class="to-home-button hero-button"> <a href="index.html"> back to home! </a> </button>
+    <div class="committee-container">
+        <a class="picture-title" id="committee-info"> Our Committee </a>
+        <div class="image-container">
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 1" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>Social media</mark> <br> Ralph Alfred</div>
+            </div>
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 2" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>Treasurer</mark> <br> Jarrod Zhu</div>
+            </div>
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 3" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>General Executive</mark><br> Bethany Lake</div>
+            </div>
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 4" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>General Executive</mark> <br>Daniel Maiava </div>
+            </div>
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 5"src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>Secretary</mark><br> Jack Chu</div>
+            </div>
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 6" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>President</mark> <br>Alex Long</div>
+            </div>
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 7" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>Vice President</mark><br> Luis Lau</div>
+            </div>
         </div>
-    </div> 
+    </div>  
 
     <div class="footer">
         <div> contact us @ucbclub@gmail.com</div>
