add bank acc number

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             <div class="filler-container">
                 <h3><a id="session-info" style="font-size: 2rem" >Session Info</a> </h3>
                 <img class="sessiongraphic" src="images/UCANBC_PRICE_SESSION.png">
+                    <div class="bank-num"> <mark>Bank account: 01-0777-0086616-00</mark> </div>
             </div>
         </div> 
 
