add column direction for mobile format

--- a/index.html
+++ b/index.html
@@ -160,12 +160,23 @@
                 <img class="sessiongraphic" src="images/UCANBC_PRICE_SESSION.png">
                     <div class="bank-num"> <mark>Bank account: 01-0777-0086616-00</mark> </div>
             </div>
+            <div class="session-container-mob"> 
+                <div> <img src="images/mob-images/session-info1.PNG"> </div>
+                <div> <img src="images/mob-images/session-info2.JPG"> </div>
+                <div> <img src="images/mob-images/session-info3.JPG"> </div>
+            </div>
         </div> 
+
 
         <div class="filler-section" style="background-color: #F9FaF8"> 
             <div class="filler-container">
                 <h3> <a id="membership-info" style="font-size: 2rem">Membership Info</a> </h3>
                 <img class="sessiongraphic" src="images/UCANBC_MEMBERSHIP.png">
+            </div>
+            <div class="membership-container-mob">
+                <div> <img src="./images/mob-images/membership-info1.JPG"> </div>
+                <div> <img src="./images/mob-images/membership-info2.JPG"> </div>
+                <div> <img src="./images/mob-images/membership-info3.JPG"> </div>
             </div>
         </div> 
         
