--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UC Badminton Club</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=OpenSans">
     <link rel="stylesheet" href="style.css">
 
     <link rel="icon" href="./images/favicon.png" type="image/png ">
@@ -163,7 +164,7 @@
             <div class="session-container-mob"> 
                 <div> <img src="images/mob-images/session-info1.PNG"> </div>
                 <div> <img src="images/mob-images/session-info2.JPG"> </div>
-                <div> <img src="images/mob-images/session-info3.JPG"> </div>
+                <div> <img src="images/mob-images/session-info3.jpeg"> </div>
             </div>
         </div> 
 
