add iframe map for our location + correct spelling mistake in Ralph name and add (ucanbc)

--- a/committee.html
+++ b/committee.html
@@ -63,7 +63,7 @@
                 <a href="./committee.html"> Our Committee! </a>
                 <a href="./media.html">Media </a>
                 <a href="./sign-up.html">Sign up </a>
-                <a href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
+                <a href="https://ucsa.org.nz/clubs/browse/"> Other Clubs </a>
                 <a href="faq.html"> FAQ! </a>
                 <div>contact us at @ucbclub@gmail.com</div>
             </div>
