--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a class="text-link" href="./media.html">Media </a>
             <a class="text-link" href="./sign-up.html">Sign up </a>
             <a class="text-link" href="faq.html"> FAQ! </a>
-            <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
+            <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other clubs </a>
         </div>
     </div>
 
@@ -93,7 +93,7 @@
                 <div class="text-container">
                     <h1 style="font-size: 3em; font-weight:bolder; margin: 10px 0 10px;"> Hello! </h1>
                     <p  style="font-size: 1.5em; margin: 0px; margin-bottom: 5px; opacity: 1;"> 
-                        We are the <span>U</span>niversity of <span>Can</span>terbury <span>B</span>adminton <span>C</span>lub
+                        We are the <span>U</span>niversity of <span>Can</span>terbury <span>B</span>adminton <span>C</span>lub (UCanBC)
                     </p>
                          <p style="font-size:1.5em;">
                             A social club welcoming all players. Most of us are University students however anyone is welcome to join!
@@ -114,7 +114,7 @@
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 1" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Social media</mark> <br> Ralph Alfred</div>
+                    <div class="text"> <mark>Social media</mark> <br> Ralf Alfred</div>
                 </div>
                 <div class=display-info> 
                     <div>
