add font and centered home text

--- a/committee.html
+++ b/committee.html
@@ -133,7 +133,7 @@
 
     <div class="footer">
         <div> contact us @ucbclub@gmail.com</div>
-        <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club.The Odin project</div>
+        <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club</div>
     </div>
    
 </body>
