--- a/faq.html
+++ b/faq.html
@@ -79,7 +79,7 @@
             <a class="text-link" href="./media.html">Media </a>
             <a class="text-link" href="./sign-up.html">Sign up </a>
             <a class="text-link" href="faq.html"> FAQ! </a>
-            <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
+            <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other Clubs </a>
         </div>
     </div>
  
@@ -90,8 +90,10 @@
                         <h5 class="question">What equipment do I need to bring?</h5>
                             You can simply bring yourself and preferably some indoor court shoes, we have racquets and shuttles provided.
                         <h5 class="question"> Where is the Gymnasium?</h5>
-                        <div class="mapouter"><div class="gmap_canvas"><iframe width="674" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=3351557,%20Upper%20Riccarton,%20Christchurch%208041&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-i.net"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:674px;}</style><a href="https://www.embedgooglemap.net">embed map on website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:674px;}</style></div></div>
-                        We are located at the University of Canterbury Recreation centre close to campus
+                        We are located at UC Rec & Sport. <br>
+                        3351557, Upper Riccarton, Christchurch 8041
+                        <!-- <div class="mapouter"><div class="gmap_canvas"><iframe id="gmap_canvas" src="https://maps.google.com/maps?q=3351557,%20Upper%20Riccarton,%20Christchurch%208041&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div></div> -->
+                        
                         <h5 class="question">How does the membership discount card work? </h5>
                             Simply present your Membership discount card to any of our amazing sponsors and they will apply the discount for you!
                         <h5 class="question">Do I need to be a member to play? </h5>
@@ -108,7 +110,7 @@
 
     <div class="footer">
         <div> contact us @ucbclub@gmail.com</div>
-        <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club.The Odin project</div>
+        <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club</div>
     </div>
    
 </body>
