--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UC Badminton Club</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=OpenSans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     <link rel="stylesheet" href="style.css">
 
     <link rel="icon" href="./images/favicon.png" type="image/png ">
@@ -66,7 +66,7 @@
                 <a href="./committee.html"> Our Committee! </a>
                 <a href="./media.html">Media! </a>
                 <a href="./sign-up.html">Sign up! </a>
-                <a href="https://ucsa.org.nz/clubs/browse/"> Other clubs! </a>
+                <a href="https://ucsa.org.nz/clubs/browse/"> Other Clubs! </a>
                 <a href="faq.html"> FAQ! </a>
                 <div>contact us at @ucbclub@gmail.com</div>
             </div>
@@ -93,7 +93,7 @@
                 <div class="text-container">
                     <h1 style="font-size: 3em; font-weight:bolder; margin: 10px 0 10px;"> Hello! </h1>
                     <p  style="font-size: 1.5em; margin: 0px; margin-bottom: 5px; opacity: 1;"> 
-                        We are the <span>U</span>niversity of <span>Can</span>terbury <span>B</span>adminton <span>C</span>lub (UCanBC)
+                        We are the <span>U</span>niversity of <span>Can</span>terbury <span>B</span>adminton <span>C</span>lub <span>(UCanBC)</span>
                     </p>
                          <p style="font-size:1.5em;">
                             A social club welcoming all players. Most of us are University students however anyone is welcome to join!
@@ -183,7 +183,7 @@
         
         <div class="footer">
             <div> contact us @ucbclub@gmail.com </div>
-            <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club.The Odin project</div>
+            <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club</div>
         </div>
     </div>
 
