--- a/committee.html
+++ b/committee.html
@@ -79,7 +79,7 @@
             <a class="text-link" href="./media.html">Media </a>
             <a class="text-link" href="./sign-up.html">Sign up </a>
             <a class="text-link" href="faq.html"> FAQ! </a>
-            <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
+            <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other Clubs </a>
         </div>
     </div>
  
@@ -90,7 +90,7 @@
                 <div>
                     <img class="box-img" title="comittee portrait" alt="committee portrait 1" src="./images/shuttle-portrait.png">
                 </div>
-                <div class="text"> <mark>Social media</mark> <br> Ralph Alfred</div>
+                <div class="text"> <mark>Social media</mark> <br> Ralf Alfred</div>
             </div>
             <div class=display-info> 
                 <div>
